# att_so3

./: CMakeLists.txt  Doxyfile  README.md  package.xml
include/att_so3/: so3_att.h
launch/: att.launch  ms.launch
python/: gen_config_file.py  gen_config_file.py~  plot_att.py
scripts/: att_process_script.sh  att_process_script.sh~
src/: att_so3_publisher.cpp  mems_process.cpp  so3_att.cpp
